--- a/app/views/index.html
+++ b/app/views/index.html
@@ -64,7 +64,36 @@
 					Myanmar (Burma)
 				</h1>
 			</div>
+			<div class="travel-advice-notice">
+				<div class="travel-advice-notice__header">
 
+					<div id="warning-text-942a7859" class="gem-c-warning-text govuk-warning-text">
+						<span class="govuk-warning-text__icon" aria-hidden="true">!</span>
+						<h2 class="govuk-warning-text__text gem-c-warning-text__text--large">
+							<span class="govuk-warning-text__assistive">Important</span>
+							COVID-19 Travel
+
+						</h2>
+					</div>
+				</div>
+				<div class="travel-advice-notice__content">
+					<p class="govuk-body">
+						<strong>
+							Under current UK COVID-19 restrictions, you must stay at home. It is illegal to travel abroad for holidays.
+						</strong>
+						Check the <a href="/guidance/national-lockdown-stay-at-home">rules in England</a>, <a href="https://www.gov.scot/coronavirus-covid-19/">Scotland</a>, <a href="https://gov.wales/covid-19-alert-levels">Wales</a> and <a href="https://www.nidirect.gov.uk/articles/coronavirus-covid-19-regulations-guidance-what-restrictions-mean-you">Northern Ireland</a>.
+					</p>
+					<p class="govuk-body">
+						Do not travel unless you have a legally permitted reason to do so. In England, you must <a href="/guidance/coronavirus-covid-19-declaration-form-for-international-travel">complete a declaration form for international travel</a> (except for travel to Ireland).
+					</p>
+					<p class="govuk-body">
+						<a href="/guidance/travel-advice-novel-coronavirus">Check our advice</a> for all the countries you will visit or transit through. Some countries have closed borders, and any country may further restrict travel or bring in new rules with little warning.
+					</p>
+					<p class="govuk-body">
+						To <a href="/uk-border-control">enter or return to the UK from abroad</a> (except from Ireland), you must follow all the rules for entering the UK. These include providing your journey and contact details, and evidence of a negative COVID-19 test before you travel. When you arrive, you must quarantine and take additional COVID-19 tests. This will take place in a managed quarantine hotel if you enter England from a <a href="/guidance/transport-measures-to-protect-the-uk-from-variant-strains-of-covid-19">red list travel ban country</a>, or enter Scotland.
+					</p>
+				</div>
+			</div>
 			<aside class="part-navigation-container" role="complementary">
 				<nav role="navigation" class="govuk-grid-row part-navigation" aria-label="Travel advice pages" data-module="track-click">
 					<nav class="gem-c-contents-list " aria-label="Contents" role="navigation" data-module="track-click">
